--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OmicronSeg - Segurança Eletrônica e Cabeamento Estruturado</title>
+     <!-- Link para a fonte Roboto -->
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
 </head>
+
 <body>
     <div id="root"></div>
 </body>
